--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,6 @@
 
 # Crash log files
 crash.log
-
 # Ignore any .tfvars files that are generated automatically for each Terraform run. Most
 # .tfvars files are managed as part of configuration and so should be included in
 # version control.
@@ -27,3 +26,17 @@ override.tf.json
 
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
+.idea
+jitsi
+helmfile.yaml
+security-groups.tf
+versions.tf
+vpc.tf
+outputs.tf
+main.tf
+kubernetes.tf
+hosted-zone.tf
+external-dns.yaml
+eks-cluster.tf
+.terraform.lock.hcl
+.terraform
