--- a/.github/workflows/eks-environment.yaml
+++ b/.github/workflows/eks-environment.yaml
@@ -9,7 +9,7 @@ on:
         required: false
         description: 'Test scenario tags'
 
-name: Deploy app
+name: Prepare EKS environment
 jobs:
   prepare-ci-environment:
     runs-on: ubuntu-latest
@@ -28,48 +28,31 @@ jobs:
       - uses: actions/checkout@v2.2.0
         with:
           fetch-depth: 0
-#      - name: 'Get Previous tag'
-#        id: previoustag
-#        uses: "WyriHaximus/github-action-get-previous-tag@v1"
-#      - name: Set up QEMU
-#        uses: docker/setup-qemu-action@v1
-#      - name: Set up Docker Buildx
-#        uses: docker/setup-buildx-action@v1
-#      - name: Login to DockerHub
-#        uses: docker/login-action@v1
-#        with:
-#          username: ${{ secrets.DOCKERHUB_USERNAME }}
-#          password: ${{ secrets.DOCKERHUB_TOKEN }}
-#      - name: Build and push
-#        id: docker_build
-#        uses: docker/build-push-action@v2
-#        with:
-#          push: true
-#          tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}:${{ steps.previoustag.outputs.tag }}-test
-#      - name: Image digest
-#        run: echo ${{ steps.docker_build.outputs.digest }}
+      #      - name: 'Get Previous tag'
+      #        id: previoustag
+      #        uses: "WyriHaximus/github-action-get-previous-tag@v1"
+      #      - name: Set up QEMU
+      #        uses: docker/setup-qemu-action@v1
+      #      - name: Set up Docker Buildx
+      #        uses: docker/setup-buildx-action@v1
+      #      - name: Login to DockerHub
+      #        uses: docker/login-action@v1
+      #        with:
+      #          username: ${{ secrets.DOCKERHUB_USERNAME }}
+      #          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      #      - name: Build and push
+      #        id: docker_build
+      #        uses: docker/build-push-action@v2
+      #        with:
+      #          push: true
+      #          tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}:${{ steps.previoustag.outputs.tag }}-test
+      #      - name: Image digest
+      #        run: echo ${{ steps.docker_build.outputs.digest }}
       - name: Terraform fmt
         id: fmt
         run: terraform fmt -check
         working-directory: ./terraform
         continue-on-error: true
-  prepare-ci-environment1:
-    runs-on: ubuntu-latest
-    env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-      BRANCH_NAME: ${{ github.head_ref }}
-    steps:
-      - uses: hashicorp/setup-terraform@v1
-        with:
-          terraform_version: 0.14.8
-      - uses: actions/checkout@v2
-      - name: Checkout
-        uses: actions/checkout@v2
-      - uses: actions/checkout@v2.2.0
-        with:
-          fetch-depth: 0
       - name: Terraform Init
         id: init
         run: |
