--- a/.github/workflows/eks-environment.yaml
+++ b/.github/workflows/eks-environment.yaml
@@ -11,7 +11,7 @@ on:
 
 name: Prepare EKS environment
 jobs:
-  prepare-terraform:
+  applying-terrafrom:
     runs-on: ubuntu-latest
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -62,23 +62,6 @@ jobs:
           -backend-config="dynamodb_table=terraform-workadventure-locks" \
           -backend-config="encrypt=true"
         working-directory: ./terraform
-  applying-terraform:
-    runs-on: ubuntu-latest
-    env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-      BRANCH_NAME: ${{ github.head_ref }}
-    steps:
-      - uses: hashicorp/setup-terraform@v1
-        with:
-          terraform_version: 0.14.8
-      - uses: actions/checkout@v2
-      - name: Checkout
-        uses: actions/checkout@v2
-      - uses: actions/checkout@v2.2.0
-        with:
-          fetch-depth: 0
 #      - name: Setup Terraform variables
 #        working-directory: ./terraform
 #        id: vars
