--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,19 +29,12 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
-      - name: Copy kube-config
-        run: |-
-          mkdir -p ~/.kube
-          echo ${{ secrets.KUBE_CONFIG_DATA }} > ~/.kube/config
-      - name: Setup helmfile
-        uses: mamezou-tech/setup-helmfile@v0.8.0
-      - name: Test
-        run: |
-          cat ~/.kube/config
-          helmfile --version
-          helm version
-          kubectl version --client
-          kubectl get ns
+      - name: helm deploy
+        uses: behoof4mind/helm-eks-action@master
+        env:
+          KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
+        with:
+          command: helmfile version
 #      - uses: actions/github-script@0.9.0
 #        env:
 #          PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
