--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,9 +14,6 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: hashicorp/setup-terraform@v1
-        with:
-          terraform_version: 0.14.8
       - uses: actions/checkout@v2
       - name: Checkout
         uses: actions/checkout@v2
@@ -29,6 +26,11 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
+      - name: Replace image in config
+        uses: ./.github/actions/replace
+        with:
+          files: helmfile.yaml
+          replacements: '$AWS_KEY=${{ secrets.AWS_ACCESS_KEY_ID }},$AWS_SECRET=${{ secrets.AWS_SECRET_ACCESS_KEY }}'
       - name: helm deploy
         uses: behoof4mind/helm-eks-action@master
         env:
