--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,7 +47,7 @@ jobs:
         env:
           KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_BASE64 }}
         with:
-          command: kubectl config get-contexts
+          command: helmfile sync
 #      - name: Sync helmfile and app state
 #        uses: behoof4mind/helm-eks-action@master
 #        env:
