--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,7 +42,7 @@ jobs:
           find: "MY_AWS_SECRET"
           replace: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-      - name: check cluster availability
+      - name: Sync helmfile and app state
         uses: behoof4mind/helm-eks-action@master
         env:
           KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_BASE64 }}
