--- a/helmfile.yaml
+++ b/helmfile.yaml
@@ -1,7 +1,7 @@
 
 repositories:
   - name: behoof4mind
-    url:  https://behoof4mind.github.io/helm-chart
+    url:  https://behoof4mind.github.io/helm-charts
   - name: traefik
     url:  https://helm.traefik.io/traefik
   - name: bitnami
@@ -40,7 +40,6 @@ releases:
   - name: workadventure
     namespace: workadventure
     chart: behoof4mind/workadventure-chart
-    version: 0.1.0
     atomic: false
     values:
       - domain: workadventure-game.link
